# Diamantes

./: AUTHORS  Doxyfile  Makefile.in  README.md  aclocal.m4  configure  configure.in  diamantes.kdevelop  diamantes.kdevelop.pcs  diamantes.kdevses
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debug/: Makefile  config.h  config.status  libtool
debug/src/: Makefile  diamante.cnf  diamantes
src/: Makefile.am  Makefile.in  casilla.cpp  casilla.h  casilla.h~  entorno.cpp  entorno.h  juego.h  juego.h~  main.cpp  mainbase.cpp  mainbase.cpp~  maintablero.cpp~  pruebastablero.cpp  pruebastablero.cpp~  tablero.cpp  tablero.cpp~  tablero.h  tablero.h~
