bin_PROGRAMS = diamantes

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
diamantes_LDFLAGS = $(all_libraries) 
diamantes_SOURCES = casilla.cpp casilla.h entorno.cpp entorno.h juego.cpp \
	mainbase.cpp pruebastablero.cpp tablero.cpp
_SOURCES = tablero.h
_SOURCES = juego.h
_SOURCES = juego.h
_SOURCES = juego.h
